# kail_location

./: .kiro_tmp_ui.xml  README.md  README_EN.md  build.gradle.kts
NewBlackbox/Bcore/: build.gradle
app/: build.gradle.kts
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: inject.dex  native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  dobby_hook.h  elf_util.cpp  elf_util.h  logging.h  main.cpp  sensor_hook.cpp
app/src/main/cpp/native_hook/: hook.cpp  sensor_simulator.cpp
app/src/main/cpp/root/: inject.cpp  inject64.cpp
app/src/main/java/com/kail/location/service/: ServiceGo.kt  ServiceGoNoroot.kt  ServiceGoRoot.kt
app/src/main/java/com/kail/location/utils/: GoApplication.kt  InjectionCrashSentinel.kt  KailLog.kt  ShellUtils.kt  SimulationDiagnostics.kt  UpdateChecker.kt
app/src/main/java/com/kail/location/viewmodels/: CellSimulationViewModel.kt  JoystickViewModel.kt  LocationSimulationViewModel.kt  NavigationSimulationViewModel.kt  RouteSimulationViewModel.kt  SettingsViewModel.kt  WifiSimulationViewModel.kt
app/src/main/java/com/kail/location/xposed/: FakeLocState.kt  FakeLocationXposed.kt  KailCommandHandler.kt  LocationServiceHookLite.kt  NativeHook.kt  SensorHookLite.kt  (+1 more)
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
(+31 files in other folders)
